# DietGuard

./: .dockerignore  .gitignore  DOCKER_README.md  Makefile  README.md  appspec.yml  aws-parameters.md  buildspec.yml  docker-compose.yml  fix_postgres.sh  index.html  ingredient-analysis.html  run-postgres.sh
backend/: .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  appspec.yml  buildspec.yml  create_migration.py  event_listener.py  main.py  pyproject.toml  setup_database.py  verify_limit.py
backend/alembic/: env.py
backend/alembic/versions/: 25005ab00d20_create_initial_tables.py  47b08e5adfbc_create_initial_tables.py  6c8312ccb278_add_nutrition_analysis_count.py  7cb87dd40631_add_packages_table_and_link_.py  833e80e60db7_create_initial_tables.py  9dac3c5f5fe0_replace_age_with_date_of_birth.py  a0e7dd2be033_add_weight_height_and_token_usage.py  add_auth_tables.py  aff3572e44f2_make_expires_at_nullable.py  bab38266222b_create_initial_tables.py  d75768c64154_add_token_usage_table.py  e430d1eceeff_create_initial_tables.py
backend/data/: aws_models.json  food-response.json
backend/docs/: API_QUICK_REFERENCE.md
backend/scripts/: add_package_id.py  check_packages.py  generate_encryption_key.py  get_debug_token.py  install_dependencies.sh  seed_packages.py  seed_roles.py  setup_tables.sh  start_application.sh  start_server.sh  stop_application.sh  stop_server.sh  test_nutrition_calculator_with_reference.py  test_signup_trial.py  test_summary_agent.py  validate_service.sh
backend/test/: rabitmq_client.py
frontend/: .env  (+9 more)
(+85 files in other folders)
