[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.33",
    "langchain-community>=0.3.0",
    "langfuse>=3.5.0",
    "langgraph>=0.6.7",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "uvicorn>=0.36.0",
    "httpx>=0.25.2",
    "python-socketio==5.10.0",
    "email-validator>=2.1.0",
    "xmltodict>=0.13.0",
    "ollama>=0.6.1",
    "langchain-ollama>=1.0.1",
]
